--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,18 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Rain Check v.0345</title>
+    <title>Weather Report v.0345</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <pre id="asciiText">
-      #     #                                             ######                                    
-      #  #  # ######   ##   ##### #    # ###### #####     #     # ###### #####   ####  #####  ##### 
-      #  #  # #       #  #    #   #    # #      #    #    #     # #      #    # #    # #    #   #   
-      #  #  # #####  #    #   #   ###### #####  #    #    ######  #####  #    # #    # #    #   #   
-      #  #  # #      ######   #   #    # #      #####     #   #   #      #####  #    # #####    #   
-      #  #  # #      #    #   #   #    # #      #   #     #    #  #      #      #    # #   #    #   
-       ## ##  ###### #    #   #   #    # ###### #    #    #     # ###### #       ####  #    #   #        
+      #     #                                             ######
+      #  #  # ######   ##   ##### #    # ###### #####     #     # ###### #####   ####  #####  #####
+      #  #  # #       #  #    #   #    # #      #    #    #     # #      #    # #    # #    #   #
+      #  #  # #####  #    #   #   ###### #####  #    #    ######  #####  #    # #    # #    #   #
+      #  #  # #      ######   #   #    # #      #####     #   #   #      #####  #    # #####    #
+      #  #  # #      #    #   #   #    # #      #   #     #    #  #      #      #    # #   #    #
+       ## ##  ###### #    #   #   #    # ###### #    #    #     # ###### #       ####  #    #   #
     </pre>
     <pre id="instructions"></pre>
     <pre id="output"></pre>
@@ -22,10 +22,8 @@
       <span id="command-input"></span>
       <span id="cursor" class="blink"></span>
     </div>
-
     <div id="interlaced"></div>
     <div id="glare"></div>
-
     <script src="/terminal.js"></script>
   </body>
 </html>
